관리자 상품 등록

--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-//	implementation group: 'org.json', name: 'json', version: '20090211'
-//	implementation 'org.json:json:20190722'
-//	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-//	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
 	implementation 'org.json:json:20190722'
 	implementation 'mysql:mysql-connector-java'
 	compileOnly 'org.projectlombok:lombok'
