--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
