--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,7 +48,7 @@ spring:
       dbPort: 3306
       dbIp: 192.168.0.5
       password: 1234
-      jdbc-url: jdbc:mysql://192.168.0.5:3306/book?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+      jdbc-url: jdbc:mysql://localhost:3306/book?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
       driver-class-name: com.mysql.cj.jdbc.Driver
       connectionTimeout: 40000
       serverTimezone: Asia/Seoul
